...
                    color = MaterialTheme.colorScheme.onSurfaceVariant,
                )
            }
            Icon(
                if (showInstructions) Icons.Outlined.Edit else Icons.Outlined.ExpandMore,
                contentDescription =
                    if (showInstructions) "Edit instructions" else "Show instructions",
                tint = MaterialTheme.colorScheme.onSurfaceVariant,
                modifier = Modifier.padding(top = 2.dp).size(20.dp),
            )
        }
    }
}
...
